# hpffp

./: README.md  ReaderTIODesignPattern.md  stack.yaml
.stack-work/: stack.sqlite3
ch10/: chapExer.hs  databaseItem.hs  rewritingWithFolds.hs  scanExer.hs  understandingFolds.hs
ch11/: binaryTree.hs  caesar.hs  capitalizeWords.hs  constructionDeconstruction.hs  daPhone.hs  gardenGrow.hs  huttonsRazor.hs  isSubseqOf.hs  languageEx.hs  newtype.hs  programmers.hs  theQuad.hs  vehicles.hs  vehicles2.hs
ch12/: binarytree.hs  iterate.hs  natural.hs  smallEither.hs  smallMaybe.hs  stringProcessing.hs  validateTheWord.hs
ch13/: hello.hs  modCode.hs
ch13/hangman/: hangman.cabal  stack.yaml
ch13/hangman/.stack-work/: stack.sqlite3
ch13/hangman/.stack-work/ghci/3c793352/: cabal_macros.h
ch13/hangman/src/: Hangman.hs  Main.hs
ch14/: genRandomGen.hs  idempotence.hs  quickcheck.hs  wordNumber.hs  wordNumberTest.hs
ch14/addition/: addition.cabal
ch14/addition/.stack-work/: stack.sqlite3
ch14/addition/.stack-work/ghci/08c2082a/: cabal_macros.h
ch14/addition/.stack-work/ghci/5d1c6456/: cabal_macros.h
ch14/addition/.stack-work/ghci/dc8eed47/: cabal_macros.h
ch14/addition/.stack-work/install/aarch64-osx/19a2b6f1a7940d5bdb83237a718bdd5e84a8e2f0fce7ddaf7ae79a12f10f6a92/9.2.3/lib/aarch64-osx-ghc-9.2.3/addition-0.1.0.0-4WthwwRHvE13MoqGns9ocb/: Addition.dyn_hi  Addition.hi
ch14/addition/.stack-work/install/aarch64-osx/19a2b6f1a7940d5bdb83237a718bdd5e84a8e2f0fce7ddaf7ae79a12f10f6a92/9.2.3/lib/aarch64-osx-ghc-9.2.3/addition-0.1.0.0-KX6PSJbXGOsA2wwf65WEYR/: Addition.dyn_hi  Addition.hi
ch14/addition/.stack-work/install/aarch64-osx/19a2b6f1a7940d5bdb83237a718bdd5e84a8e2f0fce7ddaf7ae79a12f10f6a92/9.2.3/pkgdb/: addition-0.1.0.0-6qQs0lr9lLj1dSkAJBSOWV.conf  package.cache
ch14/addition/src/: Addition.hs
ch15/: exercise.hs  madness.hs  maybeMonoid.hs  mem.hs  optionalMonoid.hs
ch16/: exercise.hs  heavyLifting.hs  instancesOfFunc.hs  liftTwice.hs  possibly.hs  shortExercise.hs
ch17/: chapExercises.hs  constantInstance.hs  cow.hs  daniel.hs  fixerUpper.hs  identityInstance.hs  listApplicativeExercise.hs  lookups.hs  maybePerson.hs  notes.hs  quickBatch.hs  validationsOnEither.hs  ziplistApplicativeExer.hs
ch18/: bind.hs  chapExercise.hs  daniel.hs  eitherMonad.hs  (+1 more)
(+56 files in other folders)
