cabal-version:        2.2

name:                addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/addition#readme
author:              Author name here
maintainer:          example@example.com
category:            Text
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules: Addition
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5
                  , hspec
                  , QuickCheck
  hs-source-dirs: src
  default-language: Haskell2010
  
-- executable addition
--   hs-source-dirs:      src
--   main-is:             Main.hs
--   default-language:    Haskell2010
--   build-depends:       base >= 4.7 && < 5
--   ghc-options:         -Wall
--                        -Wcompat
--                        -Widentities
--                        -Wincomplete-record-updates
--                        -Wincomplete-uni-patterns
--                        -Wmissing-export-lists
--                        -Wmissing-home-modules
--                        -Wpartial-fields
--                        -Wredundant-constraints
